[gd_scene load_steps=2 format=3 uid="uid://ctest345678"]

[ext_resource type="Script" path="res://scenes/test/nesting_viewer_test.gd" id="1_test"]

[node name="NestingViewerTest" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_test")

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -100.0
offset_right = 150.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="TitleLabel" type="Label" parent="VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "法术嵌套查看器测试"
horizontal_alignment = 1

[node name="SpellNameLabel" type="Label" parent="VBox"]
layout_mode = 2
text = "未加载法术"
horizontal_alignment = 1

[node name="LoadSampleButton" type="Button" parent="VBox"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "加载示例法术"

[node name="OpenViewerButton" type="Button" parent="VBox"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
disabled = true
text = "打开嵌套查看器"
